@@ -1,0 +1,146 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.16.0
+// source: comments.sql
+
+package generated
+
+import (
+	"context"
+)
+
+const getCommentsForPath = `-- name: GetCommentsForPath :many
+SELECT id, path_id, author, content, created_at, parent, hidden, removed FROM "Comments"
+WHERE id = $1 ORDER BY id
+`
+
+func (q *Queries) GetCommentsForPath(ctx context.Context, id int64) ([]Comment, error) {
+	rows, err := q.db.QueryContext(ctx, getCommentsForPath, id)
+	if err != nil {
+		return nil, err
+	}
+	defer rows.Close()
+	var items []Comment
+	for rows.Next() {
+		var i Comment
+		if err := rows.Scan(
+			&i.ID,
+			&i.PathID,
+			&i.Author,
+			&i.Content,
+			&i.CreatedAt,
+			&i.Parent,
+			&i.Hidden,
+			&i.Removed,
+		); err != nil {
+			return nil, err
+		}
+		items = append(items, i)
+	}
+	if err := rows.Close(); err != nil {
+		return nil, err
+	}
+	if err := rows.Err(); err != nil {
+		return nil, err
+	}
+	return items, nil
+}
+
+const getDownVotesForComment = `-- name: GetDownVotesForComment :many
+SELECT category, SUM(value) FROM "VoteRecords"
+WHERE comment_id = $1 and value < 0 GROUP BY category
+`
+
+type GetDownVotesForCommentRow struct {
+	Category string `json:"category"`
+	Sum      int64  `json:"sum"`
+}
+
+func (q *Queries) GetDownVotesForComment(ctx context.Context, commentID int64) ([]GetDownVotesForCommentRow, error) {
+	rows, err := q.db.QueryContext(ctx, getDownVotesForComment, commentID)
+	if err != nil {
+		return nil, err
+	}
+	defer rows.Close()
+	var items []GetDownVotesForCommentRow
+	for rows.Next() {
+		var i GetDownVotesForCommentRow
+		if err := rows.Scan(&i.Category, &i.Sum); err != nil {
+			return nil, err
+		}
+		items = append(items, i)
+	}
+	if err := rows.Close(); err != nil {
+		return nil, err
+	}
+	if err := rows.Err(); err != nil {
+		return nil, err
+	}
+	return items, nil
+}
+
+const getUpVotesForComment = `-- name: GetUpVotesForComment :many
+SELECT category, SUM(value) FROM "VoteRecords"
+WHERE comment_id = $1 and value > 0 GROUP BY category
+`
+
+type GetUpVotesForCommentRow struct {
+	Category string `json:"category"`
+	Sum      int64  `json:"sum"`
+}
+
+func (q *Queries) GetUpVotesForComment(ctx context.Context, commentID int64) ([]GetUpVotesForCommentRow, error) {
+	rows, err := q.db.QueryContext(ctx, getUpVotesForComment, commentID)
+	if err != nil {
+		return nil, err
+	}
+	defer rows.Close()
+	var items []GetUpVotesForCommentRow
+	for rows.Next() {
+		var i GetUpVotesForCommentRow
+		if err := rows.Scan(&i.Category, &i.Sum); err != nil {
+			return nil, err
+		}
+		items = append(items, i)
+	}
+	if err := rows.Close(); err != nil {
+		return nil, err
+	}
+	if err := rows.Err(); err != nil {
+		return nil, err
+	}
+	return items, nil
+}
+
+const getVotesForCommentByUser = `-- name: GetVotesForCommentByUser :many
+SELECT category FROM "VoteRecords"
+WHERE comment_id = $1 and user_id = $2
+`
+
+type GetVotesForCommentByUserParams struct {
+	CommentID int64 `json:"comment_id"`
+	UserID    int64 `json:"user_id"`
+}
+
+func (q *Queries) GetVotesForCommentByUser(ctx context.Context, arg GetVotesForCommentByUserParams) ([]string, error) {
+	rows, err := q.db.QueryContext(ctx, getVotesForCommentByUser, arg.CommentID, arg.UserID)
+	if err != nil {
+		return nil, err
+	}
+	defer rows.Close()
+	var items []string
+	for rows.Next() {
+		var category string
+		if err := rows.Scan(&category); err != nil {
+			return nil, err
+		}
+		items = append(items, category)
+	}
+	if err := rows.Close(); err != nil {
+		return nil, err
+	}
+	if err := rows.Err(); err != nil {
+		return nil, err
+	}
+	return items, nil
+}
