@@ -1,0 +1,19 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.16.0
+// source: domains.sql
+
+package generated
+
+import (
+	"context"
+)
+
+const ensureDomainRecordExits = `-- name: EnsureDomainRecordExits :exec
+INSERT INTO "Domains" ("id") VALUES ($1)
+`
+
+func (q *Queries) EnsureDomainRecordExits(ctx context.Context, id string) error {
+	_, err := q.db.ExecContext(ctx, ensureDomainRecordExits, id)
+	return err
+}
