@@ -1,0 +1,2 @@
+-- name: EnsureDomainRecordExits :exec
+INSERT INTO "Domains" ("id") VALUES ($1);
