@@ -4,7 +4,9 @@ import "github.com/comment-anything/ca-back-end/communication"
 
 // Page contains cached data for a page, which is a discrete set of comments associated with a particular URL. It also contains a map of all users and guests on the current page.
 type Page struct {
-	fullPath       string
+	domain         string
+	path           string
+	pathID         int64
 	CachedComments map[int64]communication.Comment
 	MembersOnPage  map[int64]UserControllerInterface
 	GuestsOnPage   map[int64]*GuestController
@@ -53,4 +55,10 @@ func (p *Page) GetComments(user UserControllerInterface) {
 	var fp communication.FullPage
 	fp.Comments = r
 	user.AddWrapped("FullPage", fp)
+}
+
+func (p *Page) LoadComments(comments []communication.Comment) {
+	for _, val := range comments {
+		p.CachedComments[val.CommentId] = val
+	}
 }
